# autoresearch-ai

./: .gitignore  README.md  app.py  main.py  pyproject.toml  research_report.txt  schemas.py  script.py
agents/: critic_agent.py  executor_agent.py  planner.py  planner_agent.py  plannner_agent.py  retreiver_agent.py  retriever.py  retriever_agent.py
autoresearch_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
memory/: memory_manager.py  vector_store.py
tools/: search.py
utils/: logging.py
